Malo redizajniraan prikaz komentara